--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/_radios.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/_radios.twig
@@ -11,12 +11,5 @@
  */
 #}
 
-{# RADIOS CLASSES #}
-{% set classes = ([
-  'form-item--radio',
-] | sort | join(' ') | trim )%}
-
-{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
-
 {# TEMPLATES #}
-<div{{ attributes }}>{{ children }}</div>
+<div{{ attributes.addClass('form-item--radio') }}>{{ children }}</div>
