--- a/packages/wingsuit/source/default/patterns/02-molecules/banner/banner.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/banner/banner.twig
@@ -18,38 +18,21 @@
   'bottom_center': 'text-center items-end justify-center',
   'bottom_right': 'text-right items-end justify-end',
 } %}
+
 {% set teaser %}{{- teaser -}}{% endset %}
-{# BANNER CLASSES #}
-{% set classes = ([
-  'relative swiper-slide',
-] | sort | join(' ') | trim )%}
-
-{% set wrapper_classes = ([
-  'absolute top-0 left-0 w-full h-full flex',
-] | sort | join(' ') | trim )%}
-
-{% set headline_classes = ([
-  'text-3xl font-serif',
-] | sort | join(' ') | trim )%}
-
-{% set teaser_classes = ([
-  'text-xl',
-] | sort | join(' ') | trim )%}
-
-{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATES #}
-<div {{ attributes }}>
+<div class="relative swiper-slide">
   {{ image }}
-  <div class="{{ wrapper_classes }}">
-    {% embed "@organisms/container/container.twig" with { teaser: teaser, headline: headline , classes: 'flex-1 flex ' ~ position_classes[variant]} only %}
+  <div class="absolute top-0 left-0 w-full h-full flex">
+    {% embed "@organisms/container/container.twig" with { teaser: teaser, headline: headline, classes: 'flex-1 flex ' ~ position_classes[variant]}  %}
       {% block content %}
         <div class="p-6">
-          <h2 class="{{ headline_classes }}">
+          <h2 class="text-3xl font-serif">
             {{ headline }}
           </h2>
           {% if teaser is not empty %}
-            <div class="{{ teaser_classes }}">
+            <div class="text-xl">
               {{ teaser }}
             </div>
           {% endif %}
