--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -23,44 +23,28 @@
   'w-full flex flex-col flex-grow flex-shrink',
 ] | sort | join(' ') | trim )%}
 
-{% set wrapper_classes = ([
-  'h-full border-2 border-gray-200 rounded-lg overflow-hidden',
-] | sort | join(' ') | trim )%}
-
-{% set preheadline_classes = ([
-  'tracking-widest text-lg title-font font-medium text-gray-500 mb-1',
-] | sort | join(' ') | trim )%}
-
-{% set headline_classes = ([
-  'title-font text-2xl font-medium text-gray-900 mb-3',
-] | sort | join(' ') | trim )%}
-
-{% set text_classes = ([
-  'leading-relaxed mb-3',
-] | sort | join(' ') | trim )%}
-
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
-  <div class="{{ wrapper_classes }}">
+  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
     {% if image is not empty %}
       {% block image %}
         {{ image }}
       {% endblock %}
     {% endif %}
     <div class="p-6">
-      <div class="{{ preheadline_classes }}">
+      <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
         {% block preheadline %}
           {{ preheadline }}
         {% endblock %}
       </div>
-      <h2 class="{{ headline_classes }}">
+      <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
         {% block headline %}
           {{ headline }}
         {% endblock %}
       </h2>
-      <div class="{{ text-classes }}">
+      <div class="leading-relaxed mb-3">
         {% block text %}
           {{ text }}
         {% endblock %}
