--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
@@ -7,58 +7,22 @@
  */
 #}
 
-{# HERO CLASSES #}
-{% set classes = ([
-  'text-gray-700 body-font',
-] | sort | join(' ') | trim )%}
-
-{% set wrapper_classes = ([
-  'flex py-24 md:flex-row flex-col items-center',
-] | sort | join(' ') | trim )%}
-
-{% set content_wrapper_classes = ([
-  'md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24',
-  'flex flex-col  items-center text-center'
-] | sort | join(' ') | trim )%}
-
-{% set preheadline_classes = ([
-  'uppercase tracking-loose w-full',
-] | sort | join(' ') | trim )%}
-
-{% set headline_classes = ([
-  'title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900',
-] | sort | join(' ') | trim )%}
-
-{% set text_classes = ([
-  'mb-8 leading-relaxed',
-] | sort | join(' ') | trim )%}
-
-{% set button_wrapper_classes = ([
-  'flex justify-center',
-] | sort | join(' ') | trim )%}
-
-{% set image_classes = ([
-  'w-5/6 md:w-1/2 lg:max-w-lg lg:w-full',
-] | sort | join(' ') | trim )%}
-
-{% set attributes = attributes|default(create_attribute()).addClass(classes) %}
-
 {# TEMPLATE #}
 <div>
   {% embed "@organisms/container/container.twig" %}
     {% block content %}
-      <section {{ attributes }}>
-        <div class="{{ wrapper_classes }}">
-          <div class="{{ content_wrapper_classes }}">
-            <div class="{{ preheadline_classes }}">{{ pre_headline }}</div>
-            <h1 class="{{ headline_classes }}">{{ headline }}</h1>
-            <p class="{{ text_classes }}">{{ text }}</p>
-            <div class="{{ button_wrapper_classes }}">
+      <section class="text-gray-700 body-font">
+        <div class="flex py-24 md:flex-row flex-col items-center">
+          <div class="flex flex-col  items-center text-center md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24">
+            <div class="uppercase tracking-loose w-full">{{ pre_headline }}</div>
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">{{ headline }}</h1>
+            <p class="mb-8 leading-relaxed">{{ text }}</p>
+            <div class="flex justify-center">
               <div class="mr-5">{{ button }}</div>
               <div>{{ button_second }}</div>
             </div>
           </div>
-          <div class="{{ image_classes }}">
+          <div class="w-5/6 md:w-1/2 lg:max-w-lg lg:w-full">
             {{ image }}
           </div>
         </div>
