--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -5,16 +5,10 @@
   variant == 'sticky'?'sticky',
 ]) | sort | join(' ') | trim %}
 
-{# HEADER CLASSES #}
-{% set menu_classes = ([
-  'lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent',
-  'w-full flex-grow hidden text-black z-20 mt-2 bg-white',
-] | sort | join(' ') | trim )%}
-
 {# TEMPLATE #}
 <div class="leading-normal tracking-normal mb-20">
   <header class="{{ header_classes }}" x-data="{ open: false }">
-    {% embed "@organisms/container/container.twig" %}
+    {% embed "@organisms/container/container.twig" with {menu: menu, button: button} only%}
       {% block content %}
         <div class="flex flex-wrap py-5 justify-between md:flex-row">
           <div class="flex items-center">
@@ -23,7 +17,7 @@
           <div class="block lg:hidden" @click="open = !open">
             {% include "@atoms/hamburger/hamburger.twig" only %}
           </div>
-          <div class="{{ menu_classes }}" :class="{'block': open, 'hidden': !open}">
+          <div class="w-full flex-grow hidden text-black z-20 mt-2 bg-white lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': open, 'hidden': !open}">
             {{ menu }}
             <div>
               {{ button }}
