WINGSUIT #63: Optimize behavior; refactor css to use tailwinds @apply method; mv accordion to organisms; mv accordion-item to molecules.

--- a/packages/wingsuit/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/accordion-item/accordion-item.twig
@@ -12,8 +12,8 @@
 {# TEMPLATE #}
 <div class="tab w-full overflow-hidden border-t" data-children-count="1">
   <input class="absolute opacity-0 " id="{{ id }}" type="checkbox" name="tabs">
-  <label class="block p-5 leading-normal text-base cursor-pointer" for="{{ id }}">{{ label }}</label>
-  <div class="tab-content overflow-hidden border-l-2 bg-grey-lightest border-indigo leading-normal">
+  <label class="block p-5 border-l-2 leading-normal text-xl cursor-pointer" for="{{ id }}">{{ label }}</label>
+  <div class="tab-content overflow-hidden border-l-2 border-indigo-500 leading-normal">
     <div class="p-5">{{ content }}</div>
   </div>
 </div>
