--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
@@ -12,7 +12,7 @@
   {% embed "@organisms/container/container.twig" %}
     {% block content %}
       <section class="text-gray-700 body-font">
-        <div class="flex py-24 md:flex-row flex-col items-center">
+        <div class="flex md:flex-row flex-col items-center">
           <div class="flex flex-col  items-center text-center md:w-1/2 md:pr-16 md:items-start md:text-left mb-16 md:mb-0 lg:flex-grow lg:pr-24">
             <div class="uppercase tracking-loose w-full">{{ pre_headline }}</div>
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">{{ headline }}</h1>
