--- a/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/header/header.twig
@@ -7,17 +7,17 @@
 
 {# TEMPLATE #}
 <div class="leading-normal tracking-normal mb-20">
-  <header class="{{ header_classes }}" x-data="{ open: false }">
+  <header class="{{ header_classes }}">
     {% embed "@organisms/container/container.twig" with {menu: menu, button: button} only%}
       {% block content %}
         <div class="flex flex-wrap py-5 justify-between md:flex-row">
           <div class="flex items-center">
             {% include "@atoms/logo/logo.twig" only %}
           </div>
-          <div class="block lg:hidden" @click="open = !open">
+          <div class="block lg:hidden" @click="menuIsOpen = !menuIsOpen">
             {% include "@atoms/hamburger/hamburger.twig" only %}
           </div>
-          <div class="w-full flex-grow hidden text-black z-20 mt-2 bg-white lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': open, 'hidden': !open}">
+          <div class="w-full flex-grow hidden text-black z-20 mt-2 bg-white lg:flex lg:justify-end lg:items-center lg:w-auto lg:block lg:mt-0 lg:bg-transparent" :class="{'block': menuIsOpen, 'hidden': !menuIsOpen}">
             {{ menu }}
             <div>
               {{ button }}
