Add padding bottom to section as default.

--- a/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/hero/hero.twig
@@ -9,7 +9,7 @@
 
 {# TEMPLATE #}
 <div>
-  {% embed "@organisms/container/container.twig" %}
+  {% embed "@organisms/container/container.twig" with {padding_bottom: 'default'}%}
     {% block content %}
       <section class="text-gray-700 body-font">
         <div class="flex md:flex-row flex-col items-center">
