--- a/packages/wingsuit/source/default/patterns/03-organisms/section/section.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/section/section.twig
@@ -8,8 +8,8 @@
 #}
 
 {# SETTINGS #}
-{% if padding_top is not defined %}
-  {% set padding_top = 'default' %}
+{% if padding_bottom is not defined %}
+  {% set padding_bottom = 'default' %}
 {% endif %}
 
 {%- set headline -%}{%- block headline -%}{{ headline }}{% endblock %}{% endset %}
