Add form fixes and login form.

--- a/packages/wingsuit/apps/drupal/templates/form/form-element.html.twig
+++ b/packages/wingsuit/apps/drupal/templates/form/form-element.html.twig
@@ -50,4 +50,4 @@
     'form-item',
   ]
 %}
-{% include "@atoms/forms/_form-element.twig" %}
+{% include "@atoms/forms/_form-element.twig" with {variant: type}%}
