--- a/packages/wingsuit/source/default/patterns/01-atoms/forms/_input.twig
+++ b/packages/wingsuit/source/default/patterns/01-atoms/forms/_input.twig
@@ -14,11 +14,13 @@
 {# VARIANTS #}
 {% set classes = ([
   variant == 'textfield' or
+  variant == 'password' or
   variant == 'email' or
   variant == 'date' or
   variant == 'tel' ? 'form-input w-full',
   variant == 'radio' ? 'form-radio mr-1',
   variant == 'checkbox' ? 'form-checkbox mr-1',
+  variant == 'submit' ? 'bg-primary text-white hover:bg-pink-600 px-2 py-1'
 ] | sort | join(' ') | trim )%}
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
