Update slider component.

--- a/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/packages/wingsuit/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -7,7 +7,11 @@
   footer_menu_4: pattern_preview('menu', 'footer')
 } %}
   {% block main %}
+    {% embed "@organisms/section/section.twig" with { columns: 1 } %}
+      {% block column_1 %}
     {{ pattern_preview('hero') }}
+      {% endblock %}
+    {% endembed %}
     {% embed "@organisms/section/section.twig" with { columns: 3, headline: "Section title"} %}
       {% block column_1 %}
         {{ pattern_preview('card') }}
