--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -21,14 +21,14 @@
   alignment == 'center' ? 'text-center rounded': '',
   bg_color == 'gray' ? 'bg-gray-200',
   bg_color == 'blue' ? 'bg-blue-200',
-  'w-full flex flex-col flex-grow flex-shrink',
+  'w-full flex flex-grow',
 ] | sort | join(' ') | trim )%}
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
-  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
+  <div class="border-2 border-gray-200 rounded-lg overflow-hidden">
     {% if image is not empty %}
       {% block image %}
         {{ image }}
