Add section icon support.

--- a/packages/wingsuit/apps/drupal/templates/block/block--inline-block.html.twig
+++ b/packages/wingsuit/apps/drupal/templates/block/block--inline-block.html.twig
@@ -9,7 +9,7 @@
  */
 #}
 {% if title_suffix is not empty or attributes['data-quickedit-entity-id'] %}
-<div{{ attributes }} style="display: inherit; flex: 1;">
+<div{{ attributes }}>
   {{ title_prefix }}
   {{ title_suffix }}
   {% endif %}
