--- a/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
+++ b/packages/wingsuit/source/default/patterns/02-molecules/card/card.twig
@@ -28,7 +28,7 @@
 
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
-  <div class="border-2 border-gray-200 rounded-lg overflow-hidden">
+  <div class="border-2 border-gray-200 rounded-lg overflow-hidden w-full">
     {% if image is not empty %}
       {% block image %}
         {{ image }}
