--- a/packages/wingsuit/source/default/patterns/03-organisms/slider/slider.twig
+++ b/packages/wingsuit/source/default/patterns/03-organisms/slider/slider.twig
@@ -6,15 +6,16 @@
  * See slider.wingsuit.yaml for documentation.
  */
 #}
-<div class="swiper-container">
-  <div class="swiper-wrapper">
-    {% for item in items %}
-    <div class="swiper-slide">{{ item }}</div>
-    {% endfor %}
+<div>
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      {% for item in items %}
+        <div class="swiper-slide">{{ item }}</div>
+      {% endfor %}
+    </div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-pagination"></div>
   </div>
-  <!-- Add Arrows -->
-  <div class="swiper-button-next"></div>
-  <div class="swiper-button-prev"></div>
-  <div class="swiper-pagination"></div>
 </div>
-
