--- a/starter-kits/bootstrap/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/bootstrap/source/default/patterns/01-atoms/button/button.twig
@@ -13,7 +13,7 @@
 
 {% set classes = [
   'btn d-flex align-items-center justify-content-center',
-  expanded ? 'btl-lg btn-block',
+  expanded ? 'btn-block',
   variant == 'outline' ? 'btn-outline-primary',
   icon_alignment == 'left' ? 'flex-row-reverse' : 'flex-row',
   pattern_configuration('button', variant, 'colors')[color],
