--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/card/card.twig
@@ -8,53 +8,45 @@
 
 {# CARD CLASSES #}
 {% set image_classes = ([
-  alignment == 'center'?'justify-center': '',
-  'flex',
+  alignment == 'center'?'justify-content-center': '',
+  'd-flex',
 ]) | sort | join(' ') | trim %}
 
 {% set link_classes = ([
   alignment == 'center'?'mx-auto': '',
-  'text-indigo-500', 'inline-flex', 'md:mb-2', 'lg:mb-0',
 ]) | sort | join(' ') | trim %}
 
 {% set classes = ([
-  alignment == 'center' ? 'text-center rounded': '',
-  bg_color == 'gray' ? 'bg-gray-200',
-  bg_color == 'blue' ? 'bg-blue-200',
-  'w-full flex flex-grow',
-] | sort | join(' ') | trim )%}
+  alignment == 'center' ? 'text-center',
+  'card',
+] | sort | join(' ') | trim ) %}
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
 
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
-  <div class="border-2 border-gray-200 rounded-lg overflow-hidden w-full">
-    {% if image is not empty %}
-      {% block image %}
+  {% if image is not empty %}
+    {% block image %}
+      <div class="card-img-top">
         {{ image }}
+      </div>
+    {% endblock %}
+  {% endif %}
+  <div class="card-body">
+    <div class="card-subtitle mb-2 text-muted">
+      {% block preheadline %}
+        {{ preheadline }}
       {% endblock %}
-    {% endif %}
-    <div class="p-6">
-      <div class="tracking-widest text-lg title-font font-medium text-gray-500 mb-1">
-        {% block preheadline %}
-          {{ preheadline }}
-        {% endblock %}
-      </div>
-      <h2 class="title-font text-2xl font-medium text-gray-900 mb-3">
-        {% block headline %}
-          {{ headline }}
-        {% endblock %}
-      </h2>
-      <div class="leading-relaxed mb-3">
-        {% block text %}
-          {{ text }}
-        {% endblock %}
-      </div>
-      <div class="{{ link_classes }}">
-        {% block link %}
-          {{ link }}
-        {% endblock %}
-      </div>
     </div>
+    <h2 class="card-title">
+      {% block headline %}
+        {{ headline }}
+      {% endblock %}
+    </h2>
+    <p class="card-text">
+      {% block text %}
+        {{ text }}
+      {% endblock %}
+    </p>
   </div>
 </{{ element }}>
