--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/pagination/pagination.twig
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/pagination/pagination.twig
@@ -1,16 +1,15 @@
-<nav class="flex flex-col bg-white items-center" role="navigation">
-  <ul class="flex flex-row">
-    <li class="font-sans px-4 py-4  lg:p-2 lg:px-4 text-gray-light">
-      <a class="text-md" href="{{ previous_url }}">{{ "Previous"|t }}</a>
+<nav aria-label="...">
+  <ul class="pagination">
+    <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
     </li>
     {% for item in items %}
-      <li class="font-sans px-4 py-4 lg:p-2 lg:px-4 text-black">
-        <a class="text-md {% if (item.in_active_trail) %}is-active{% endif %}"
-           href="{{ item.link }}">{{ item.title }}</a>
+      <li class="page-item {% if (item.in_active_trail) %}active{% endif %}" aria-current="page">
+        <a class="page-link" href="{{ item.link }}">{{ item.title }}<span class="sr-only">(current)</span></a>
       </li>
     {% endfor %}
-    <li class="font-sans px-4 py-4  lg:p-2 lg:px-4 text-black">
-      <a class="text-md" href="{{ next_url }}">{{ "Next"|t }}</a>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
     </li>
   </ul>
 </nav>
