(Feature) Add scales mdx documentation.

--- a/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/button/button.twig
@@ -36,7 +36,7 @@
 <{{ tag_name }} {{ attributes.addClass(classes | sort | join(' ') | trim) }}>
   {{ text }}
   {% if icon is not empty %}
-    {% include "@atoms/svg/_svg--icon.twig" with {
+    {% include "@components/svg/_svg--icon.twig" with {
       icon: icon,
       size: icon_size,
     } only %}
