WS-00: Header and footer update.

--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -1,4 +1,4 @@
-<ul class="nav">
+<ul class="nav flex-column flex-lg-row">
   {% for item in items %}
     <li class="nav-item">
       {# {% if (item.in_active_trail) %}no-underline {% else %} hover:text-gray-900 hover:text-underline py-2 px-4{% endif %} #}
