--- a/starter-kits/bootstrap/source/default/tokens/_custom.scss
+++ b/starter-kits/bootstrap/source/default/tokens/_custom.scss
@@ -8,6 +8,9 @@
 .w-6 {
   width: 24px;
 }
+.w-10 {
+  width: 40px;
+}
 
 //height
 .h-4 {
@@ -18,4 +21,7 @@
 }
 .h-6 {
   height: 24px;
+}
+.h-10 {
+  height: 40px;
 }
