--- a/starter-kits/bootstrap/source/default/patterns/03-organisms/grid/grid.twig
+++ b/starter-kits/bootstrap/source/default/patterns/03-organisms/grid/grid.twig
@@ -20,7 +20,7 @@
 
 {% set classes = ([
   gutter_container_classes,
-  'flex flex-wrap'
+  'd-flex flex-wrap row'
 ]) | sort | join(' ') | trim %}
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
@@ -35,7 +35,7 @@
         {% set cell_attributes = create_attribute().
           addClass(
           [
-            'flex flex-col',
+            'd-flex flex-column',
             column_classes,
             gutter_cell_classes
           ] | sort | join(' ') | trim) %}
